bugfix for sending changes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -164,7 +164,7 @@
 
         <!-- Main UI -->
         <div id="mainUI" style="display:none;">
-            <h1>Kwik Trip Wave Reboot Tool</h1>
+            <h1>Kwik Trip Wave Tools</h1>
             <div id="clientLoadingBar" style="display:none; margin-top:10px;">
               <div class="progress-bar-bg">
                 <div class="progress-bar-fill" id="progressBarFill"></div>
@@ -248,7 +248,7 @@
                 <img src="https://triggerpointmedia.s3.us-east-2.amazonaws.com/Logos/TPM+Powered+By+logo+.png" alt="Powered by TPM" class="powered-by-logo">
             </div>
             <p class="footer">© 2025 Trigger Point Media</p>
-            <p class="footer">Version: 1.2.0</p>
+            <p class="footer">Version: 1.3.0</p>
         </div>
     </div>
     <div id="loadingSpinner" class="spinner" style="display:none;">
